--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 
 title: DesignSafe XAI training
 author: Krishna Kumar
-logo: nsf_nheri-ds.png
+logo: logo.png
 copyright: "2024"
 
 # Force re-execution of notebooks on each build.
